<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.udacity.danielsantindebastiani.myportfolio.MainActivity"
    tools:showIn="@layout/activity_main"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <Button
            android:id="@+id/btn_popular_movies"
            style="@style/AppTheme.ButtonColored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_popular_movies"
            />

        <Button
            android:id="@+id/btn_stock_hawk"
            style="@style/AppTheme.ButtonColored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_stock_hawk"
            />

        <Button
            android:id="@+id/btn_build_it_bigger"
            style="@style/AppTheme.ButtonColored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_build_it_bigger"
            />

        <Button
            android:id="@+id/btn_make_app_material"
            style="@style/AppTheme.ButtonColored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_make_app_material"
            />

        <Button
            android:id="@+id/btn_go_ubiquitous"
            style="@style/AppTheme.ButtonColored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_go_ubiquitous"
            />

        <Button
            android:id="@+id/btn_capstone"
            style="@style/AppTheme.ButtonColored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_capstone"
            />
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>

